--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,9 @@
     <string name="enter_your_password">Enter your password</string>
     <string name="login">Login</string>
     <string name="Sign_up">Don\'t have an account?<u>Sign up</u></string>
+    <string name="plan">Plan</string>
+    <string name="profile">Profile</string>
+    <string name="track">Track</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
